# bigbro_company_server

./: .env.example.local  .env.example.prod  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  pytest.ini
.github/workflows/: bigbro-ci.yml  bigbro-prod-cd.yml  bigbro-stage-cd.yml  ci.yml
infra/compose/: docker-compose.db.yml  docker-compose.local.yml  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml
infra/nginx/: default.conf  prod.conf  stage.conf
src/accounts/: exceptions.py  models.py  serializers.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_password_alter_user_username.py  0003_alter_user_password_alter_user_username.py
src/address/: exceptions.py  models.py  serializers.py  urls.py  views.py
src/address/migrations/: 0001_initial.py  0002_alter_address_user_id.py  0003_alter_address_request.py  0004_rename_user_id_address_user.py
src/cart/: exceptions.py  models.py  serilaizers.py  urls.py  views.py
src/cart/migrations/: 0001_initial.py  0002_alter_cart_table.py  0003_alter_cart_option_alter_cart_product.py  0004_alter_cart_unique_together.py
src/core/: authentication.py  exceptions.py  urls.py
src/core/settings/: base.py  local.py  prod.py  stage.py
src/product/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
src/product/migrations/: 0001_initial.py  0002_productimage_productoption.py  0003_alter_productimage_url.py
tests/: test_test.py
tests/account/models/: test_get_or_create.py
(+4 files in other folders)
